# steve

./: .clang-format  .gitignore  .gitmodules  .mailmap  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  lineCount.py
Scripts/: generate-shaders-header-files.py  setup-debian.sh
Shaders/: fragment.fs  vertex.vs
Source/: main.cpp
Source/Steve/: Shader.cpp  Shader.hpp  Steve.cpp  Steve.hpp
Source/Steve/Application/: ApplicationWindow.cpp  ApplicationWindow.hpp
Source/Steve/Core/: Defines.hpp  Error.cpp  Error.hpp  Helpers.hpp  Result.tcc  Shaders.hpp  Utility.cpp  Utility.hpp
Source/Steve/DOM/: Container.cpp  Container.hpp  DOM.cpp  DOM.hpp  Node.hpp  Styles.cpp  Styles.hpp
Source/Steve/DOM/Container/: Container.cpp  Container.hpp
Source/Steve/DOM/Node/: Node.cpp  Node.hpp  StyledNode.cpp  StyledNode.hpp
Source/Steve/DOM/Node/Styles/: Bound.tcc  EdgeInset.tcc  EdgeStyle.tcc  Height.hpp  Margin.hpp  Padding.hpp  Styles.hpp  Width.hpp
Source/Steve/Draw/: Draw.cpp  Draw.hpp
Source/Steve/Graphics/Draw/: Draw.hpp
Source/Steve/Graphics/Renderer/: Renderer.cpp  Renderer.hpp
Source/Steve/Graphics/Renderer/Backend/: Backend.hpp
Source/Steve/Graphics/Renderer/Backend/OpenGL/: IndexBuffer.cpp  IndexBuffer.hpp  OpenGL.hpp  Shader.cpp  Shader.hpp  ShaderProgram.cpp  ShaderProgram.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp  VertexBufferLayout.cpp  VertexBufferLayout.hpp
Source/Steve/Graphics/Renderer/Context/: GraphicsContext.cpp  GraphicsContext.hpp  OpenGL.cpp  OpenGL.hpp  Vulkan.cpp  Vulkan.hpp
Source/Steve/Graphics/Renderer/Core/: Vertex.hpp
Source/Steve/Networking/: Networking.hpp
Source/Steve/Objects/: ApplicationWindow.cpp  ApplicationWindow.hpp  IndexBuffer.hpp  Vertex.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp  VertexBufferLayout.cpp  VertexBufferLayout.hpp
Source/Steve/Renderer/: Renderer.cpp  Renderer.hpp
Source/Steve/Renderer/Context/: GraphicsContext.hpp  OpenGL.cpp
Source/Steve/Shader/: ShaderProgram.cpp  ShaderProgram.hpp
Source/Steve/UI/: UI.cpp  UI.hpp
Source/Steve/UI/Container/: Container.cpp  Container.hpp
Source/Steve/UI/Node/: Node.cpp  Node.hpp  StyledNode.cpp  StyledNode.hpp
Source/Steve/UI/Node/Styles/: Bound.hpp  Bound.tcc  Color.cpp  Color.hpp  EdgeInset.tcc  Height.hpp  Margin.hpp  Padding.hpp  Styles.hpp  Width.hpp
assets/shaders/: fragment.fs  vertex.vs
cmd/: CMakeLists.txt
cmd/run/: CMakeLists.txt  main.cpp
scripts/: generate-shaders-header-files.py
source/: CMakeLists.txt
source/steve/: steve.hpp
source/steve/core/: pch
source/steve/core/common/: defines.hpp  helpers.hpp
source/steve/core/error/: codes.hpp  error.cpp  error.hpp  unit.cpp  unit.hpp
source/steve/core/result/: result.tpp
source/steve/core/utility/: log.cpp  log.hpp
source/steve/lib/application/: lifecycle.hpp  state.hpp  window.cpp  window.hpp
source/steve/lib/graphics/: draw.cpp  draw.hpp  shaders.hpp
source/steve/lib/graphics/renderer/: renderer.cpp  renderer.hpp  vertex.hpp
source/steve/lib/graphics/renderer/backend/: backend.hpp
source/steve/lib/graphics/renderer/backend/opengl/: index_buffer.cpp  index_buffer.hpp  opengl.hpp  shader.cpp  shader.hpp  shader_program.cpp  shader_program.hpp  vertex_array.cpp  vertex_array.hpp  vertex_buffer.cpp  vertex_buffer.hpp  vertex_buffer_layout.cpp  vertex_buffer_layout.hpp
source/steve/lib/graphics/renderer/context/: graphics.cpp  graphics.hpp  opengl.cpp  opengl.hpp  vulkan.cpp  vulkan.hpp
source/steve/lib/networking/: networking.hpp
source/steve/lib/ui/: ui.cpp  ui.hpp
source/steve/lib/ui/container/: container.cpp  container.hpp
source/steve/lib/ui/node/: node.cpp  node.hpp  styled_node.cpp  styled_node.hpp
source/steve/lib/ui/node/styles/: bound.hpp  color.cpp  color.hpp  edge_inset.tcc  height.hpp  margin.hpp  padding.hpp  styles.hpp  width.hpp
